--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -60,7 +60,7 @@
               [ngClass]="{'assending': (selectedSort==='name') && isAsc,'decending':(selectedSort==='name') && !isAsc}"
               class="ml-1 sortImg"></div>
           <div class="col d-flex align-items-center" (click)="sortBy('type')">Type<span
-              class="selected-length-doc-web">(2)</span>
+              class="selected-length-doc-web hide">(2)</span>
             <div class="kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'"
               [autoClose]="true" [placement]="'bottom-right'">
               <div class="dropdown dropdown-open">
@@ -69,16 +69,16 @@
                     [ngClass]="{'assending': (selectedSort==='type') && isAsc,'decending':(selectedSort==='type') && !isAsc}"
                     class="ml-1 sortImg"></button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li><span class="list-name">All</span><img src="assets/icons/check-blue.svg"></li>
+                  <li><span class="list-name">All</span><img class="hide" src="assets/icons/check-blue.svg"></li>
                   <li *ngFor="let docType of docTypeArr" (click)="sourceFilter.close();filterTable(docType,'type')">
-                    <span class="list-name">{{docType == 'webdomain' ? 'Web' :(docType == 'document'? 'Doc': '')}}</span><img src="assets/icons/check-blue.svg"></li>
+                    <span class="list-name">{{docType == 'webdomain' ? 'Web' :(docType == 'document'? 'Doc': '')}}</span><img class="hide" src="assets/icons/check-blue.svg"></li>
                 </ul>
               </div>
             </div>
           </div>
           <!-- <div class="col" (click)="sortBy('collection')">Collection <img src="assets/icons/caretDown.svg" class="ml-1"></div> -->
           <div class="col d-flex align-items-center" (click)="sortBy('recentStatus')">Status<span
-              class="selected-length-doc-web">(2)</span>
+              class="selected-length-doc-web hide">(2)</span>
             <div class="kr-sg-dropdowns type_sort_dropdown" #statusFilter="ngbDropdown" ngbDropdown [container]="'body'"
               [autoClose]="true" [placement]="'bottom-right'">
               <div class="dropdown dropdown-open">
@@ -87,9 +87,9 @@
                     [ngClass]="{'assending': (selectedSort==='recentStatus') && isAsc,'decending':(selectedSort==='recentStatus') && !isAsc}"
                     class="ml-1 sortImg"></button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li><span class="list-name">All</span><img src="assets/icons/check-blue.svg"></li>
+                  <li><span class="list-name">All</span><img class="hide"  src="assets/icons/check-blue.svg"></li>
                   <li *ngFor="let status of statusArr"
-                    (click)="statusFilter.close();filterTable(status,'recentStatus')"><span class="list-name">{{status == 'success' ? 'Success' : (status == 'failed' ? 'Fail' : 'In Progress')}}<img src="assets/icons/check-blue.svg"></span>
+                    (click)="statusFilter.close();filterTable(status,'recentStatus')"><span class="list-name" >{{status == 'success' ? 'Success' : (status == 'failed' ? 'Fail' : 'In Progress')}}<img class="hide"  src="assets/icons/check-blue.svg"></span>
                     </li>
                 </ul>
               </div>
@@ -134,10 +134,10 @@
                 <div class="box">
                   <div class="title">{{source.title || source.name}}</div>
                   <div class="type" [ngClass]="{'doc': (source.type==='document')}">
-                    {{contentTypes[source.type] | titlecase}}</div>
+                    {{contentTypes[source.source] | titlecase}}</div>
                   <div class="status-data">
                     <div class="count-pages" *ngIf="statusObj[source.recentStatus].name == 'Success'"><span
-                        class="pagelength">{{source.numPages}}</span> Pages</div>
+                        class="pagelength">{{source.extractedFaqsCount}}</span> Extracted FAQs</div>
                     <div class="status-info"
                       *ngIf="source.recentStatus && statusObj[source.recentStatus] && (source.recentStatus !== 'success') "
                       [ngStyle]="{color: (source.recentStatus && statusObj[source.recentStatus])?statusObj[source.recentStatus].color:'#202124'}">
@@ -153,7 +153,7 @@
                   </div>
                   <div class="actions-delete">                   
                     <span class="actions-links d-none"><img class="action_icon" src="assets/icons/sidemenu/table-refresh.svg"></span>
-                    <span class="actions-links" (click)="deleteSource(source,$event)"><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
+                    <span class="actions-links" (click)="deletePages('source',source,$event)"><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
                 </div>
                 </div>
               </div>
