--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -26,7 +26,7 @@
                             <label for="selectAllFaqs" class="checkbox-custom-label"></label>
                         </div>
                         <div class="kr-sg-input-search">                               
-                            <input type="text" placeholder="Search" class="input-search" [(ngModel)]="searchFaq" id="searchFaqs" name='faqsSearch' (change)="searchFaqs()">
+                            <input type="text" placeholder="Search" class="input-search" [(ngModel)]="searchFaq" id="searchFaqs" name='faqsSearch' (keyup)="searchFaqs()">
                             <img src="assets/icons/search-gray.svg" class="search-icon">
                         </div>
                         <div class="kr-sg-dropdowns" #selectResourceDrop='ngbDropdown' ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
@@ -92,10 +92,12 @@
                             <div class="text-center p-4" [ngClass]="{'hide': !moreLoading.loading}">{{moreLoading.loading?moreLoading.loadingText:'Loading.........'}}</div>
                         </perfect-scrollbar>
                        </ng-container>
+                       <div class="empty-questions-selected"  *ngIf="loadingTab">
+                        <div >
+                            <div class="heading">{{'please_wait' | translate}}</div>
+                        </div>
+                      </div>
                         <div class="empty-questions-selected"  *ngIf="!(faqs && faqs.length)">
-                            <div *ngIf="loadingTab">
-                                <div class="heading">{{'please_wait' | translate}}</div>
-                            </div>
                             <ng-container *ngIf="!loadingTab">
                                 <img src="assets/images/icons/empty_ill.svg">
                                 <div class="heading">No Questions</div>
@@ -306,7 +308,8 @@
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><img src="assets/icons/sidemenu/plus-table.svg">Add Content</button>                                            
                     <ul class="dropdown-menu content-menu">                                                              
                       <li (click)="addFaqSource('faqWeb')">Web URL</li>
-                      <li (click)="addFaqSource('faqDoc')">Upload File</li>   
+                      <li (click)="addFaqSource('faqDoc')">Upload File</li>   Can I open a Rupee Checking Account or Term Deposit Accounts for a minor?
+
                     </ul>
                 </div>
               </div>
