added rules component

--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -56,6 +56,12 @@
 			</span>
 			<span class="linkTitle">Metrics</span>
 		</div>
+		<div mat-button class="mat-button" [routerLink]="['/rules']" skipLocationChange routerLinkActive="active" (click)="preview('synonyms')" mat-button>
+			<span class="inlineIconBox">
+				<img src="assets/icons/sidemenu/metrics.svg" class="publish">				
+			</span>
+			<span class="linkTitle">Rules</span>
+		</div>
 		<div mat-button class="mat-button settings-menu">
 			<span class="inlineIconBox">
 				<img src="assets/icons/sidemenu/settings.svg" class="publish">				
